tests/models/struct/named/i128/pass/alias.rs
use dade::model;
#[model]
struct TestModel {
    #[field(alias = "val")]
    value: i128,
}
fn main() {}
