tests/models/struct/named/i128/fail/validate.rs
use dade::model;
#[model]
struct TestModel {
    #[field(validate = 2)]
    value: i128,
}
fn main() {}
